Changing the names of the files for each proyect, changing readme file information to match the new objective of the gallery and changing the link for the megaline proyect

--- a/GalleryAI/analysis/gallery_ai.ipynb
+++ b/GalleryAI/analysis/gallery_ai.ipynb
@@ -5,8 +5,8 @@
    "id": "e6c5c155",
    "metadata": {},
    "source": [
-    "# CuratorAI: A Personalized Art & Museum Discovery Engine\n",
-    "***Building an AI-Powered Museum Guide***\n",
+    "# GalleryAI - Your Personalized Virtual Art Gallery\n",
+    "***Building an AI-Powered Gallery Guide***\n",
     "\n",
     "# Table of Contents\n",
     "1. [Overview 🎯](##overview)\n",
@@ -548,7 +548,6 @@
    "id": "82679905",
    "metadata": {},
    "source": [
-    "\n",
     "Data preprocessing prepared 10 core columns for analysis:\n",
     "- **Feature Selection**: 10 columns with >83% completeness covering artwork identity, context, and visual resources\n",
     "- **Data Types**: Dates kept as integers for easier era analysis and segmentation  \n",
