Changing title and overview, adding libraries

--- a/GalleryAI/analysis/gallery_ai.ipynb
+++ b/GalleryAI/analysis/gallery_ai.ipynb
@@ -5,8 +5,8 @@
    "id": "e6c5c155",
    "metadata": {},
    "source": [
-    "# GalleryAI - Your Personalized Virtual Art Gallery\n",
-    "***Building an AI-Powered Gallery Guide***\n",
+    "# GalleryAI - Immersive Virtual Art Experience\n",
+    "***Building a Multi-Sensory AI Art Guide***\n",
     "\n",
     "# Table of Contents\n",
     "1. [Overview 🎯](##overview)\n",
@@ -27,44 +27,37 @@
    "source": [
     "## Overview\n",
     "\n",
-    "**The Art Discovery Problem**\n",
+    "**The Art Experience Gap**\n",
     "\n",
-    "> **\"I know what I like, but I don't know how to find more of it.\"**\n",
+    "> **\"Great art should move you, not just inform you.\"**\n",
     "\n",
-    "This simple frustration echoes through the grand halls of museums worldwide. Visitors stand before masterpieces feeling overwhelmed by choice, unsure where to turn next in collections spanning 5,000 years of human creativity. The Metropolitan Museum of Art alone houses over 470,000 artworks—enough to spend 30 seconds on each piece for 163 consecutive days.\n",
+    "While digital art collections have solved the problem of access, they've created a new challenge: emotional connection. Visitors scroll through thousands of artworks without the context, atmosphere, or curation that makes museum visits memorable.\n",
     "\n",
+    "**The Experience Challenge**\n",
+    "- **Emotional Disconnect**: Flat digital representations lack museum ambiance\n",
+    "- **Sensory Poverty**: Visual-only experiences miss music's emotional power\n",
+    "- **Curatorial Void**: Algorithms recommend but don't create meaningful journeys\n",
+    "- **Atmospheric Lack**: No sound, no space, no story\n",
     "\n",
-    "**The Business Challenge**\n",
+    "**Solution: GalleryAI**\n",
     "\n",
-    "Museums face a critical engagement problem:\n",
-    "- <u>Visitor Overwhelm</u>: Too many choices lead to decision paralysis\n",
-    "- <u>Personalization Gap</u>: One-size-fits-all audio guides and maps\n",
-    "- <u>Discovery Barriers</u>: Visitors struggle to find artworks that resonate with their personal tastes\n",
-    "- <u>Digital Engagement</u>: Online collections remain underutilized without intelligent navigation\n",
+    "GalleryAI transforms art discovery from browsing to experience. By combining intelligent recommendations with atmospheric design, we create virtual exhibitions where art and ambiance work together to create emotional connections.\n",
     "\n",
-    "\n",
-    "**Solution: CuratorAI**\n",
-    "\n",
-    "CuratorAI is an intelligent recommendation system that transforms art discovery from being overwhelming to personalized. By analyzing the textual artworks, their titles, artists, cultural contexts, and historical periods, building bridges between what you love and what you'll love next.\n",
-    "\n",
-    "Think of it as: \n",
-    "> **\"The Netflix for art, the Spotify for sculptures, the personal curator in your pocket.\"**\n",
-    "\n",
+    "Think of it as:\n",
+    "> **\"Part personal curator, part gallery designer, part atmospheric composer\"**\n",
     "\n",
     "**Technical Approach**\n",
-    "- <u>Content-Based Filtering</u>: Using TF-IDF and Nearest Neighbors to find similar artworks\n",
-    "- <u>Feature Engineering</u>: Transforming textual metadata into meaningful numerical representations\n",
-    "- <u>End-to-End Pipeline</u>: From raw data to deployed web application\n",
-    "- <u>Real-World Constraints</u>: Working within The Met's Open Access data policies\n",
-    "\n",
+    "- **Content Intelligence**: TF-IDF and Nearest Neighbors for meaningful art connections\n",
+    "- **Multi-Sensory Design**: Integrating visual art with era-appropriate music\n",
+    "- **Experience Architecture**: Designing gallery flows rather than just recommendations\n",
+    "- **Real Data Foundation**: Building on The Met's authentic collection\n",
     "\n",
     "**Value Proposition**\n",
+    "For **art lovers**: Emotional, immersive art discovery from home\n",
+    "For **educators**: Thematic exhibitions with atmospheric context  \n",
+    "For **designers**: Framework for multi-sensory digital experiences\n",
     "\n",
-    "For **art lovers**: Discover hidden gems and personal connections across centuries\n",
-    "For **museums**: Increase engagement, visit duration, and digital interaction\n",
-    "For **educators**: Create thematic learning journeys through visual culture\n",
-    "\n",
-    "**Let's begin our journey through data, art, and machine learning—transforming how the world discovers beauty.**"
+    "**Let's build not just a recommendation engine, but an emotional journey through art.**"
    ]
   },
   {
@@ -77,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a428abc6",
    "metadata": {},
    "outputs": [],
@@ -87,6 +80,7 @@
     "import numpy as np\n",
     "import scipy\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
     "from sklearn.neighbors import NearestNeighbors\n",
     "import joblib\n",
     "\n",
